Fixing sponser images showing up on front page on mobile

--- a/sites/all/themes/baddercamp/css/layout-fixed.css
+++ b/sites/all/themes/baddercamp/css/layout-fixed.css
@@ -736,3 +736,7 @@ body.page-program-schedule-grid{
 	width: 90%;
 	margin: 50px auto;
 }
+
+.front .view-badcamp-sponsors{
+	display:none;
+}
